<resources xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Notes</string>
    <string name="app_widget2x2">Notes 2x2</string>
    <string name="app_widget4x4">Notes 4x4</string>
    <string name="widget_havenot_content">No associated note found, click to create associated note.</string>
    <string name="widget_under_visit_mode">Privacy mode，can not see note content</string>
    <string name="notelist_string_info">...</string>
    <string name="notelist_menu_new">Add note</string>
    <string name="delete_remind_time_message">Delete reminder successfully</string>
    <string name="set_remind_time_message">Set reminder</string>
    <string name="note_alert_expired">Expired</string>
    <string name="format_date_ymd">yyyyMMdd</string>
    <string name="format_datetime_mdhm">MMMd kk:mm</string>
    <string name="notealert_ok">Got it</string>
    <string name="notealert_enter">Take a look</string>
    <string name="note_link_tel">Call</string>
    <string name="note_link_email">Send email</string>
    <string name="note_link_web">Browse web</string>
    <string name="note_link_other">Open map</string>
    <string name="note_link_time">创建闹钟</string>
    <string name="note_link_geo">查看地图</string>
    <string name="file_path" translatable="false">/MIUI/notes/</string>
    <string name="file_name_txt_format" translatable="false">notes_%s.txt</string>
     <string name="format_folder_files_count" translatable="false">(%d)</string>
     <string name="menu_create_folder">New Folder</string>
     <string name="menu_export_text">Export text</string>
     <string name="menu_sync">Sync</string>
     <string name="menu_sync_cancel">Cancel syncing</string>
     <string name="menu_setting">Settings</string>
     <string name="menu_search">Search</string>
      <string name="menu_delete">Delete</string>
      <string name="menu_move">Move to folder</string>
      <string name="menu_rename">Rename</string>
     <string name="menu_select_title">%d selected</string>
    <string name="menu_select_none">Nothing selected, the operation is invalid</string>
    <string name="menu_select_all">Select all</string>
    <string name="menu_deselect_all">Deselect all</string>
    <string name="menu_font_size">Font size</string>
    <string name="menu_font_small">Small</string>
    <string name="menu_font_normal">Medium</string>
    <string name="menu_font_large">Large</string>
    <string name="menu_font_super">Super</string>
    <string name="menu_list_mode">Enter check list</string>
    <string name="menu_normal_mode">Leave check list</string>
     <string name="menu_folder_view">View folder</string>
     <string name="menu_folder_delete">Delete folder</string>
     <string name="menu_folder_change_name">Change folder name</string>
     <string name="folder_exist">The folder %1$s exist, please rename</string>
     <string name="menu_tasks">Tasks</string>
     <string name="dialog_rename_folder_title">Rename folder</string>
     <string name="dialog_delete_folder_title">Delete folder</string>
     <string name="dialog_delete_folder_with_notes">Delete \"%1$s\" and its %2$d notes?</string>
     <string name="dialog_delete_folder_empty">Delete \"%1$s\"?</string>
     <string name="folder_name_hint">Folder name</string>
    <string name="menu_share">Share</string>
    <string name="menu_send_to_desktop">Send to home</string>
    <string name="menu_alert">Remind me</string>
    <string name="menu_remove_remind">Delete reminder</string>
    <string name="menu_title_select_folder">Select folder</string>
    <string name="menu_move_parent_folder">Parent folder</string>
    <string name="info_note_enter_desktop">Note added to home</string>
    <string name="alert_message_delete_folder">Confirm to delete folder and its notes?</string>
    <string name="alert_title_delete">Delete selected notes</string>
    <string name="alert_message_delete_notes">Confirm to delete the selected %d notes?</string>
    <string name="alert_message_delete_note">Confirm to delete this note?</string>
    <string name="format_move_notes_to_folder">Have moved selected %1$d notes to %2$s folder</string>
     <string name="error_sdcard_unmounted">SD card busy, not available now</string>
     <string name="error_sdcard_export">Export failed, please check SD card</string>
     <string name="error_note_not_exist">The note is not exist</string>
     <string name="error_note_empty_for_clock">Sorry, can not set clock on empty note</string>
     <string name="error_note_empty_for_send_to_desktop">Sorry, can not send and empty note to home</string>
      <string name="error_intent_invalid">Invalid intent</string>
      <string name="error_intent_unsupported">Unsupported intent action</string>
     <string name="success_sdcard_export">Export successful</string>
    <string name="failed_sdcard_export">Export fail</string>
    <string name="format_exported_file_location">Export text file (%1$s) to SD (%2$s) directory</string>
    <string name="ticker_syncing">Syncing notes...</string>
    <string name="ticker_success">Sync is successful</string>
    <string name="ticker_fail">Sync is failed</string>
    <string name="ticker_cancel">Sync is canceled</string>
    <string name="success_sync_account">Sync is successful with account %1$s</string>
    <string name="error_sync_network">Sync failed, please check network and account settings</string>
    <string name="error_sync_internal">Sync failed, internal error occurs</string>
    <string name="error_sync_cancelled">Sync is canceled</string>
    <string name="sync_progress_login">Logging into %1$s...</string>
    <string name="sync_progress_init_list">Getting remote note list...</string>
    <string name="preferences_title">Settings</string>
    <string name="preferences_last_sync_time_format" translatable="false">yyyy-MM-dd hh:mm:ss</string>
    <string name="preferences_button_sync_immediately">Sync immediately</string>
    <string name="preferences_button_sync_cancel">Cancel syncing</string>
    <string name="preferences_bg_random_appear_title">New note background color random</string>
    <string name="preferences_language_title">Language</string>
    <string name="folder_all">All</string>
    <string name="folder_all_templates">All Templates</string>
    <string name="folder_uncategorized">Uncategorized</string>
    <string name="button_delete">Delete</string>
    <string name="call_record_folder_name">Call notes</string>
    <string name="hint_foler_name">Input name</string>
    <string name="search_label">Searching Notes</string>
    <string name="search_hint">Search notes</string>
    <string name="search_setting_description">Text in your notes</string>
    <string name="search">Notes</string>
    <string name="datetime_dialog_ok">set</string>
    <string name="datetime_dialog_cancel">cancel</string>
    <plurals name="search_results_title">
         <item quantity="one"><xliff:g id="number" example="1">%1$s</xliff:g> result for \"<xliff:g id="search" example="???">%2$s</xliff:g>\"</item>
        
        <item quantity="other"><xliff:g id="number" example="15">%1$s</xliff:g> results for \"<xliff:g id="search" example="???">%2$s</xliff:g>\"</item>
    </plurals>
    <string name="empty_notes_hint">暂无便签，点击右下角按钮创建</string>
    <string name="empty_notes_icon">空便签图标</string>
    <string name="menu_edit_note">Edit note</string>
    <string name="menu_login">Login</string>
    <string name="menu_export">Export</string>
    <string name="menu_templates">Templates</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_trash">Trash</string>
    <string name="root_folder_name">My Notes</string>
    <string name="sidebar_close">Close sidebar</string>
    <string name="sidebar_create_folder">Create folder</string>
    <string name="folder_note_count">%d notes</string>
    <string name="dialog_create_folder_title">Create folder</string>
    <string name="dialog_create_folder_hint">Folder name</string>
    <string name="error_folder_name_empty">Folder name cannot be empty</string>
    <string name="error_folder_name_too_long">Folder name too long (max 50 characters)</string>
    <string name="error_folder_name_exists">Folder already exists</string>
    <string name="create_folder_success">Folder created successfully</string>
    <string name="menu_pin">Pin</string>
    <string name="menu_lock">Lock</string>
    <string name="lock_confirmation">确定需要为其上锁？</string>
    <string name="lock_confirm_button">确定</string>
    <string name="lock_cancel_button">再想想</string>
    <string name="delete_confirmation">Are you sure you want to delete selected notes?</string>
    <string name="menu_unpin">Unpin</string>
    <string name="menu_unlock">Unlock</string>
    <string name="search_no_results">No results found</string>
    <string name="search_history_title">Search History</string>
    <string name="search_history_clear">Clear</string>
    <string name="menu_undo">Undo</string>
    <string name="menu_redo">Redo</string>
    <string name="menu_clear_history">Clear Undo History</string>
    <string name="undo_success">Undo successful</string>
    <string name="redo_success">Redo successful</string>
    <string name="undo_fail">Nothing to undo</string>
    <string name="redo_fail">Nothing to redo</string>
    <string name="menu_save_as_template">Save as template</string>
    <string name="menu_picture">Picture</string>
    <string name="menu_rich_text">Rich Text</string>
    <string name="accessibility_service_description">小米便签全局速记服务。开启后请勿开启“无障碍快捷方式”，以免出现多余的系统悬浮按钮。</string>
    <string name="capsule_permission_alert_window_title">需要悬浮窗权限</string>
    <string name="capsule_permission_alert_window_message">全局速记胶囊需要悬浮窗权限才能显示在其他应用上层。</string>
    <string name="capsule_permission_accessibility_title">需要无障碍服务权限</string>
    <string name="capsule_permission_accessibility_message">全局速记胶囊需要无障碍服务权限来监听剪贴板和获取来源应用。</string>
    <string name="preferences_capsule_title">全局速记胶囊</string>
    <string name="preferences_capsule_summary">开启侧边悬浮胶囊，支持跨应用拖拽和剪贴板速记</string>
    <string name="menu_restore">Restore</string>
    <string name="menu_permanent_delete">Delete Forever</string>
    <string name="drawer_login_prompt">点击登录/注册</string>
    <string name="drawer_default_username">用户</string>
    <string name="drawer_default_device_id">Device ID: Unknown</string>
    <string name="drawer_sync_status_synced">已同步</string>
    <string name="drawer_sync_status_syncing">同步中...</string>
    <string name="drawer_sync_status_failed">同步失败</string>
    <string name="drawer_group_notes">笔记</string>
    <string name="drawer_group_sync">云同步</string>
    <string name="drawer_group_other">其他</string>
    <string name="drawer_all_notes">全部笔记</string>
    <string name="drawer_favorites">收藏</string>
    <string name="drawer_reminders">提醒</string>
    <string name="drawer_sync_now">立即同步</string>
    <string name="drawer_sync_settings">同步设置</string>
    <string name="drawer_login">登录</string>
    <string name="drawer_logout">退出登录</string>
    <string name="sync_title">Cloud Sync</string>
    <string name="sync_login_status">Login Status</string>
    <string name="sync_device_id_default">Device ID: Not initialized</string>
    <string name="sync_auto_sync">Auto Sync</string>
    <string name="sync_last_time">Last Sync Time:</string>
    <string name="sync_never">Never</string>
    <string name="sync_status_label">Sync Status:</string>
    <string name="sync_status_idle">Idle</string>
    <string name="sync_button_now">Sync Now</string>
    <string name="folder_title">文件夹</string>
    <string name="conflict_title">Note Conflict</string>
    <string name="conflict_local_version">Local Version</string>
    <string name="conflict_cloud_version">Cloud Version</string>
    <string name="conflict_use_local">Use Local</string>
    <string name="conflict_use_cloud">Use Cloud</string>
    <string name="conflict_merge">Merge</string>
</resources>